# gguf-rs-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  config.example.yaml
docs/: INFERENCE.md
src/: lib.rs  main.rs  sampler.rs
src/gguf/: reader.rs  types.rs
src/gpu/: add.glsl  add_rmsnorm.glsl  attention.glsl  f32_gemv.glsl  kv_write.glsl  mod.rs  q3k_gemv.glsl  q4_0_gemv.glsl  q4_1_gemv.glsl  q4k_gemv.glsl  q5k_gemv.glsl  q6k_gemv.glsl  q8_0_gemv.glsl  rmsnorm.glsl  rope.glsl  shader.wgsl  swiglu.glsl
src/math/: mod.rs  ops.rs  rope.rs
src/model/: config.rs  llama.rs  mod.rs
src/tensor/: dequant.rs  mod.rs  storage.rs
src/tokenizer/: bpe.rs  chat.rs  mod.rs
