[package]
name = "gguf-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap     = { version = "4", features = ["derive"] }
anyhow   = "1"
half     = "2"
memmap2  = "0.9"
rayon    = "1"
ash      = "0.38"
bytemuck = { version = "1", features = ["derive"] }

[build-dependencies]
shaderc = "0.8"

[package.metadata.shaderc]
# Uses shaderc libraries from the Vulkan SDK (set VULKAN_SDK env var)

[profile.release]
opt-level = 3